@@ -1,6 +1,10 @@
 == 2.5.0 ==
 Release date: July 21, 2021
 * New: Content Reveal Widget
+* Added: Pricing Table - Options to change HTML tag for title and subtitle
+* Added: Price Menu - Option to change HTML tag for title
+* Added: Buttons - Text shadow option
+* Enhancement: Pricing Table - Updated Feature Text field with Textarea field
 * Gravity Forms, Caldera Forms, WP Forms - Removed duplicate upgrade pro notice
 
 == 2.4.2 ==
